[package]
name = "solana_ws_client"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3" 
url = "2.5"
reqwest = { version = "0.13.2", features = ["json"] }
async-channel = "2.5.0"
